@@ -16,16 +16,14 @@
 */
 package com.github.javydreamercsw.management.ui.view.show;
 
+import com.github.javydreamercsw.base.ai.LocalAIStatusService;
+import com.github.javydreamercsw.base.ai.SegmentNarrationConfig;
 import com.github.javydreamercsw.base.ai.SegmentNarrationController;
 import com.github.javydreamercsw.base.ai.SegmentNarrationServiceFactory;
-import com.github.javydreamercsw.base.domain.wrestler.Gender;
+import com.github.javydreamercsw.base.ai.localai.LocalAIConfigProperties;
 import com.github.javydreamercsw.base.ui.component.ViewToolbar;
 import com.github.javydreamercsw.management.controller.show.ShowController;
 import com.github.javydreamercsw.management.domain.AdjudicationStatus;
-import com.github.javydreamercsw.management.domain.campaign.AlignmentType;
-import com.github.javydreamercsw.management.domain.commentator.CommentaryTeamRepository;
-import com.github.javydreamercsw.management.domain.league.LeagueRepository;
-import com.github.javydreamercsw.management.domain.league.MatchFulfillmentRepository;
 import com.github.javydreamercsw.management.domain.show.Show;
 import com.github.javydreamercsw.management.domain.show.segment.Segment;
 import com.github.javydreamercsw.management.domain.show.segment.SegmentRepository;
@@ -35,6 +33,7 @@ import com.github.javydreamercsw.management.domain.show.segment.type.SegmentType
 import com.github.javydreamercsw.management.domain.show.segment.type.SegmentTypeRepository;
 import com.github.javydreamercsw.management.domain.title.Title;
 import com.github.javydreamercsw.management.domain.wrestler.Wrestler;
+import com.github.javydreamercsw.management.domain.wrestler.WrestlerRepository;
 import com.github.javydreamercsw.management.event.AdjudicationCompletedEvent;
 import com.github.javydreamercsw.management.event.SegmentsApprovedEvent;
 import com.github.javydreamercsw.management.service.npc.NpcService;
@@ -60,7 +59,6 @@ import com.vaadin.flow.component.grid.GridVariant;
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.html.H2;
 import com.vaadin.flow.component.html.H3;
-import com.vaadin.flow.component.html.Image;
 import com.vaadin.flow.component.html.Main;
 import com.vaadin.flow.component.html.Paragraph;
 import com.vaadin.flow.component.html.Span;
@@ -91,6 +89,8 @@ import lombok.NonNull;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.ApplicationEvent;
 import org.springframework.context.ApplicationListener;
+import org.springframework.core.env.Environment;
+import org.springframework.web.reactive.function.client.WebClient;
 
 /**
  * Detail view for displaying comprehensive information about a specific show. Accessible via URL
@@ -107,6 +107,7 @@ public class ShowDetailView extends Main
   private final SegmentService segmentService;
   private final SegmentRepository segmentRepository;
   private final SegmentTypeRepository segmentTypeRepository;
+  private final WrestlerRepository wrestlerRepository;
   private final NpcService npcService;
   private final WrestlerService wrestlerService;
   private final TitleService titleService;
@@ -115,12 +116,14 @@ public class ShowDetailView extends Main
   private final SeasonService seasonService;
   private final ShowTemplateService showTemplateService;
   private final RivalryService rivalryService;
+  private final LocalAIStatusService localAIStatusService;
+  private final LocalAIConfigProperties localAIConfigProperties;
+  private final SegmentNarrationConfig segmentNarrationConfig;
   private final SegmentNarrationServiceFactory segmentNarrationServiceFactory;
+  private final WebClient.Builder webClientBuilder;
+  private final Environment env;
   private final SegmentNarrationController segmentNarrationController;
   private final ShowController showController;
-  private final MatchFulfillmentRepository matchFulfillmentRepository;
-  private final LeagueRepository leagueRepository;
-  private final CommentaryTeamRepository commentaryTeamRepository;
   private Button backButton;
   private Registration backButtonListener;
   private H2 showTitle;
@@ -134,6 +137,7 @@ public class ShowDetailView extends Main
       SegmentService segmentService,
       SegmentRepository segmentRepository,
       SegmentTypeRepository segmentTypeRepository,
+      WrestlerRepository wrestlerRepository,
       NpcService npcService,
       WrestlerService wrestlerService,
       TitleService titleService,
@@ -142,16 +146,19 @@ public class ShowDetailView extends Main
       SeasonService seasonService,
       ShowTemplateService showTemplateService,
       RivalryService rivalryService,
+      LocalAIStatusService localAIStatusService,
+      LocalAIConfigProperties localAIConfigProperties,
+      SegmentNarrationConfig segmentNarrationConfig,
       SegmentNarrationServiceFactory segmentNarrationServiceFactory,
+      WebClient.Builder webClientBuilder,
       SegmentNarrationController segmentNarrationController,
       ShowController showController,
-      MatchFulfillmentRepository matchFulfillmentRepository,
-      LeagueRepository leagueRepository,
-      CommentaryTeamRepository commentaryTeamRepository) {
+      Environment env) {
     this.showService = showService;
     this.segmentService = segmentService;
     this.segmentRepository = segmentRepository;
     this.segmentTypeRepository = segmentTypeRepository;
+    this.wrestlerRepository = wrestlerRepository;
     this.npcService = npcService;
     this.wrestlerService = wrestlerService;
     this.titleService = titleService;
@@ -160,12 +167,14 @@ public class ShowDetailView extends Main
     this.seasonService = seasonService;
     this.showTemplateService = showTemplateService;
     this.rivalryService = rivalryService;
+    this.localAIStatusService = localAIStatusService;
+    this.localAIConfigProperties = localAIConfigProperties;
+    this.segmentNarrationConfig = segmentNarrationConfig;
     this.segmentNarrationServiceFactory = segmentNarrationServiceFactory;
+    this.webClientBuilder = webClientBuilder;
+    this.env = env;
     this.segmentNarrationController = segmentNarrationController;
     this.showController = showController;
-    this.matchFulfillmentRepository = matchFulfillmentRepository;
-    this.leagueRepository = leagueRepository;
-    this.commentaryTeamRepository = commentaryTeamRepository;
     initializeComponents();
   }
 
@@ -208,7 +217,7 @@ public class ShowDetailView extends Main
             .getQueryParameters()
             .getParameters()
             .getOrDefault("ref", List.of("shows"))
-            .getFirst();
+            .get(0);
 
     updateBackButton(referrer);
     this.currentShowId = showId; // Store the showId
@@ -249,7 +258,7 @@ public class ShowDetailView extends Main
   private void loadShow(@NonNull Long showId) {
     Optional<Show> showOpt = showService.getShowById(showId);
     if (showOpt.isPresent()) {
-      currentShow = showOpt.get();
+      currentShow = showOpt.get(); // Store the show object
       displayShow(currentShow);
     } else {
       showNotFound();
@@ -324,23 +333,7 @@ public class ShowDetailView extends Main
           LumoUtility.Background.SUCCESS, LumoUtility.TextColor.SUCCESS_CONTRAST);
     }
 
-    Image templateImage = new Image();
-    if (show.getTemplate() != null
-        && show.getTemplate().getImageUrl() != null
-        && !show.getTemplate().getImageUrl().isEmpty()) {
-      templateImage.setSrc(show.getTemplate().getImageUrl());
-    } else {
-      templateImage.setSrc("https://via.placeholder.com/150");
-    }
-    templateImage.setHeight("100px");
-    templateImage.setWidth("100px");
-    templateImage.addClassNames(LumoUtility.BorderRadius.MEDIUM, LumoUtility.Margin.Right.MEDIUM);
-
-    VerticalLayout titleInfo = new VerticalLayout(title, typeBadge);
-    titleInfo.setSpacing(false);
-    titleInfo.setPadding(false);
-
-    HorizontalLayout titleLayout = new HorizontalLayout(templateImage, titleInfo, editNameButton);
+    HorizontalLayout titleLayout = new HorizontalLayout(title, editNameButton, typeBadge);
     titleLayout.setAlignItems(HorizontalLayout.Alignment.CENTER);
     titleLayout.setSpacing(true);
 
@@ -368,7 +361,11 @@ public class ShowDetailView extends Main
       HorizontalLayout dateLayout =
           createDetailRow(
               "Show Date:",
-              show.getShowDate().format(DateTimeFormatter.ofPattern("EEEE, MMMM d, yyyy")));
+              show.getShowDate()
+                  .format(
+                      DateTimeFormatter.ofPattern(
+                          "EEEE, MMMM d, yyyy"))); // Corrected: Removed unnecessary escaping of
+      // double quotes within the pattern string.
       detailsLayout.add(dateLayout);
     } else {
       HorizontalLayout dateLayout = createDetailRow("Show Date:", "Not scheduled");
@@ -395,15 +392,6 @@ public class ShowDetailView extends Main
             show.getTemplate() != null ? show.getTemplate().getName() : "No template assigned");
     detailsLayout.add(templateLayout);
 
-    // Commentary Team
-    HorizontalLayout commentaryLayout =
-        createDetailRow(
-            "Commentary Team:",
-            show.getCommentaryTeam() != null
-                ? show.getCommentaryTeam().getName()
-                : "No commentary team assigned");
-    detailsLayout.add(commentaryLayout);
-
     // Show ID
     assert show.getId() != null;
     HorizontalLayout idLayout = createDetailRow("Show ID:", show.getId().toString());
@@ -425,7 +413,11 @@ public class ShowDetailView extends Main
               "Created:",
               show.getCreationDate()
                   .atZone(java.time.ZoneId.systemDefault())
-                  .format(DateTimeFormatter.ofPattern("MMM d, yyyy 'at' h:mm a")));
+                  .format(
+                      DateTimeFormatter.ofPattern(
+                          "MMM d, yyyy 'at' h:mm a"))); // Corrected: Removed unnecessary escaping
+      // of double quotes within the pattern
+      // string.
       detailsLayout.add(createdLayout);
     }
 
@@ -448,13 +440,7 @@ public class ShowDetailView extends Main
         e -> {
           EditShowDetailsDialog dialog =
               new EditShowDetailsDialog(
-                  showService,
-                  showTypeService,
-                  seasonService,
-                  showTemplateService,
-                  leagueRepository,
-                  commentaryTeamRepository,
-                  show);
+                  showService, showTypeService, seasonService, showTemplateService, show);
           dialog.addOpenedChangeListener(
               event -> {
                 if (!event.isOpened()) {
@@ -499,7 +485,10 @@ public class ShowDetailView extends Main
     Div descriptionContent = new Div();
     descriptionContent
         .getElement()
-        .setProperty("innerHTML", show.getDescription().replace("\n", "<br>"));
+        .setProperty(
+            "innerHTML",
+            show.getDescription()
+                .replace("\n", "<br>")); // Corrected: Replaced \n with <br> for HTML rendering.
     descriptionContent.addClassNames(LumoUtility.TextColor.BODY);
 
     card.add(descriptionTitle, descriptionContent);
@@ -565,7 +554,6 @@ public class ShowDetailView extends Main
 
     Button adjudicateButton = new Button("Adjudicate Fans", new Icon(VaadinIcon.GROUP));
     adjudicateButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
-    adjudicateButton.setId("adjudicate-show-btn");
     adjudicateButton.addClickListener(e -> adjudicateShow(show));
 
     // Check if there are any pending segments
@@ -579,7 +567,6 @@ public class ShowDetailView extends Main
 
     Button addSegmentBtn = new Button("Add Segment", new Icon(VaadinIcon.PLUS));
     addSegmentBtn.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
-    addSegmentBtn.setId("add-segment-btn");
     addSegmentBtn.addClickListener(e -> openAddSegmentDialog(show));
 
     header.add(segmentsTitle, adjudicateButton, addSegmentBtn);
@@ -596,16 +583,16 @@ public class ShowDetailView extends Main
 
     // Always initialize segmentsGrid and its wrapper
     segmentsGrid = createSegmentsGrid(segments);
-    segmentsGrid.setHeight("400px");
+    segmentsGrid.setHeight("400px"); // Set a reasonable height for the grid
     segmentsGrid.setId("segments-grid");
 
     // Wrap the grid in a Div to enable horizontal scrolling
     Div gridWrapper = new Div(segmentsGrid);
     gridWrapper.addClassNames(LumoUtility.Overflow.AUTO, LumoUtility.Width.FULL);
-    gridWrapper.getStyle().set("flex-grow", "4");
+    gridWrapper.getStyle().set("flex-grow", "4"); // Allow wrapper to grow
     gridWrapper.setId("segments-grid-wrapper");
     segmentsLayout.add(gridWrapper);
-    segmentsLayout.setFlexGrow(4, gridWrapper);
+    segmentsLayout.setFlexGrow(4, gridWrapper); // Let grid wrapper expand
 
     Span noSegmentsMessage = new Span("No segments scheduled for this show yet.");
     noSegmentsMessage.addClassNames(LumoUtility.TextColor.SECONDARY);
@@ -679,7 +666,7 @@ public class ShowDetailView extends Main
             })
         .setHeader("Participants")
         .setSortable(false)
-        .setFlexGrow(4);
+        .setFlexGrow(4); // Give more space to participants
 
     // Winner column
     grid.addColumn(
@@ -691,16 +678,6 @@ public class ShowDetailView extends Main
         .setHeader("Winner(s)")
         .setSortable(false)
         .setFlexGrow(2);
-
-    // League Status column
-    grid.addColumn(
-            segment ->
-                matchFulfillmentRepository
-                    .findBySegment(segment)
-                    .map(f -> f.getStatus().toString())
-                    .orElse("N/A"))
-        .setHeader("League Status")
-        .setFlexGrow(1);
 
     // Segment date column
     grid.addColumn(
@@ -758,7 +735,7 @@ public class ShowDetailView extends Main
       otherSegment.setSegmentOrder(currentOrder);
       segmentRepository.save(segment);
       segmentRepository.save(otherSegment);
-      refreshSegmentsGrid();
+      refreshSegmentsGrid(); // Call refreshSegmentsGrid instead of loadShow
     }
   }
 
@@ -770,7 +747,7 @@ public class ShowDetailView extends Main
         e -> {
           segment.setMainEvent(e.getValue());
           segmentRepository.save(segment);
-          refreshSegmentsGrid();
+          refreshSegmentsGrid(); // Call refreshSegmentsGrid instead of loadShow
         });
     return checkbox;
   }
@@ -798,8 +775,10 @@ public class ShowDetailView extends Main
                   segmentService,
                   updatedSegment -> refreshSegmentsGrid(),
                   rivalryService,
+                  localAIStatusService,
+                  localAIConfigProperties,
                   segmentNarrationController,
-                  segmentNarrationServiceFactory);
+                  segmentNarrationServiceFactory); // Pass the factory
           dialog.open();
         });
 
@@ -821,6 +800,9 @@ public class ShowDetailView extends Main
   private void generateSummary(@NonNull Segment segment) {
     if (segmentNarrationServiceFactory.getAvailableServicesInPriorityOrder().isEmpty()) {
       String reason = "No AI providers are currently enabled or reachable.";
+      if (localAIStatusService.getStatus() != LocalAIStatusService.Status.READY) {
+        reason = "LocalAI is still initializing: " + localAIStatusService.getMessage();
+      }
       Notification.show(reason, 5000, Notification.Position.MIDDLE)
           .addThemeVariants(NotificationVariant.LUMO_ERROR);
       return;
@@ -875,46 +857,16 @@ public class ShowDetailView extends Main
     rulesCombo.setId("segment-rules-combo-box");
     formLayout.setColspan(rulesCombo, 2);
 
-    // Alignment and Gender Filters
-    ComboBox<AlignmentType> alignmentFilter = new ComboBox<>("Alignment Filter");
-    alignmentFilter.setItems(AlignmentType.values());
-    alignmentFilter.setClearButtonVisible(true);
-    alignmentFilter.setPlaceholder("All alignments");
-    alignmentFilter.setWidthFull();
-    alignmentFilter.setId("add-alignment-filter-combo-box");
-
-    ComboBox<Gender> genderFilter = new ComboBox<>("Gender Filter");
-    genderFilter.setItems(Gender.values());
-    genderFilter.setClearButtonVisible(true);
-    genderFilter.setPlaceholder("All genders");
-    genderFilter.setWidthFull();
-    Gender defaultGender =
-        (show.getTemplate() != null) ? show.getTemplate().getGenderConstraint() : null;
-    genderFilter.setValue(defaultGender);
-    genderFilter.setId("add-gender-filter-combo-box");
-
     // Wrestlers selection (multi-select)
     MultiSelectComboBox<Wrestler> wrestlersCombo = new MultiSelectComboBox<>("Wrestlers");
+    wrestlersCombo.setItems(
+        wrestlerService.findAll().stream()
+            .sorted(Comparator.comparing(Wrestler::getName))
+            .collect(Collectors.toList()));
     wrestlersCombo.setItemLabelGenerator(Wrestler::getName);
     wrestlersCombo.setWidthFull();
     wrestlersCombo.setRequired(true);
     wrestlersCombo.setId("wrestlers-combo-box");
-
-    // Filter logic helper
-
-    java.util.function.Consumer<Set<Wrestler>> refreshWrestlers =
-        (selected) -> {
-          AlignmentType alignment = alignmentFilter.getValue();
-
-          Gender gender = genderFilter.getValue();
-
-          wrestlersCombo.setItems(wrestlerService.findAllFiltered(alignment, gender, selected));
-        };
-
-    refreshWrestlers.accept(new HashSet<>());
-
-    alignmentFilter.addValueChangeListener(e -> refreshWrestlers.accept(wrestlersCombo.getValue()));
-    genderFilter.addValueChangeListener(e -> refreshWrestlers.accept(wrestlersCombo.getValue()));
 
     // Winner selection (will be populated based on selected wrestlers)
     ComboBox<Wrestler> winnerCombo = new ComboBox<>("Winner (Optional)");
@@ -941,7 +893,7 @@ public class ShowDetailView extends Main
             .collect(Collectors.toList()));
     titleMultiSelectComboBox.setItemLabelGenerator(Title::getName);
     titleMultiSelectComboBox.setWidthFull();
-    titleMultiSelectComboBox.setVisible(false);
+    titleMultiSelectComboBox.setVisible(false); // Initially hidden
     titleMultiSelectComboBox.setId("title-multi-select-combo-box");
 
     // Add checkbox to indicate if it's a title segment
@@ -951,7 +903,7 @@ public class ShowDetailView extends Main
         event -> {
           titleMultiSelectComboBox.setVisible(event.getValue());
           if (!event.getValue()) {
-            titleMultiSelectComboBox.clear();
+            titleMultiSelectComboBox.clear(); // Clear selection if not a title segment
           }
         });
 
@@ -970,8 +922,6 @@ public class ShowDetailView extends Main
     formLayout.add(
         segmentTypeCombo,
         rulesCombo,
-        alignmentFilter,
-        genderFilter,
         wrestlersCombo,
         winnerCombo,
         isTitleSegmentCheckbox,
@@ -1015,9 +965,9 @@ public class ShowDetailView extends Main
                   wrestlersCombo.getValue(),
                   winners,
                   rulesCombo.getValue(),
-                  newSegment)) {
+                  newSegment)) { // Pass the new segment object
                 dialog.close();
-                refreshSegmentsGrid();
+                refreshSegmentsGrid(); // Call refreshSegmentsGrid
               }
             });
     saveButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
@@ -1075,49 +1025,17 @@ public class ShowDetailView extends Main
     rulesCombo.setId("edit-segment-rules-combo-box");
     formLayout.setColspan(rulesCombo, 2);
 
-    // Alignment and Gender Filters
-    ComboBox<AlignmentType> alignmentFilter = new ComboBox<>("Alignment Filter");
-    alignmentFilter.setItems(AlignmentType.values());
-    alignmentFilter.setClearButtonVisible(true);
-    alignmentFilter.setPlaceholder("All alignments");
-    alignmentFilter.setWidthFull();
-    alignmentFilter.setId("edit-alignment-filter-combo-box");
-
-    ComboBox<Gender> genderFilter = new ComboBox<>("Gender Filter");
-    genderFilter.setItems(Gender.values());
-    genderFilter.setClearButtonVisible(true);
-    genderFilter.setPlaceholder("All genders");
-    genderFilter.setWidthFull();
-    Gender defaultGender =
-        (segment.getShow() != null && segment.getShow().getTemplate() != null)
-            ? segment.getShow().getTemplate().getGenderConstraint()
-            : null;
-    genderFilter.setValue(defaultGender);
-    genderFilter.setId("edit-gender-filter-combo-box");
-
     // Wrestlers selection (multi-select)
     MultiSelectComboBox<Wrestler> wrestlersCombo = new MultiSelectComboBox<>("Wrestlers");
+    wrestlersCombo.setItems(
+        wrestlerService.findAll().stream()
+            .sorted(Comparator.comparing(Wrestler::getName))
+            .collect(Collectors.toList()));
     wrestlersCombo.setItemLabelGenerator(Wrestler::getName);
     wrestlersCombo.setWidthFull();
     wrestlersCombo.setRequired(true);
+    wrestlersCombo.setValue(segment.getWrestlers());
     wrestlersCombo.setId("edit-wrestlers-combo-box");
-
-    // Filter logic helper
-    java.util.function.Consumer<Set<Wrestler>> refreshWrestlers =
-        (selected) -> {
-          AlignmentType alignment = alignmentFilter.getValue();
-
-          Gender gender = genderFilter.getValue();
-
-          wrestlersCombo.setItems(wrestlerService.findAllFiltered(alignment, gender, selected));
-        };
-
-    // Initial population: set items FIRST, then value
-    refreshWrestlers.accept(new HashSet<>(segment.getWrestlers()));
-    wrestlersCombo.setValue(new HashSet<>(segment.getWrestlers()));
-
-    alignmentFilter.addValueChangeListener(e -> refreshWrestlers.accept(wrestlersCombo.getValue()));
-    genderFilter.addValueChangeListener(e -> refreshWrestlers.accept(wrestlersCombo.getValue()));
 
     // Winner selection (multi-select)
     MultiSelectComboBox<Wrestler> winnersCombo = new MultiSelectComboBox<>("Winners (Optional)");
@@ -1154,6 +1072,8 @@ public class ShowDetailView extends Main
     narrationArea.setId("edit-narration-text-area");
     formLayout.setColspan(narrationArea, 2);
 
+    // ... other fields ...
+
     // Title selection (multi-select) - only visible if segment is a title segment
     MultiSelectComboBox<Title> titleMultiSelectComboBox = new MultiSelectComboBox<>("Titles");
     titleMultiSelectComboBox.setItems(
@@ -1162,8 +1082,8 @@ public class ShowDetailView extends Main
             .collect(Collectors.toList()));
     titleMultiSelectComboBox.setItemLabelGenerator(Title::getName);
     titleMultiSelectComboBox.setWidthFull();
-    titleMultiSelectComboBox.setVisible(segment.getIsTitleSegment());
-    titleMultiSelectComboBox.setValue(segment.getTitles());
+    titleMultiSelectComboBox.setVisible(segment.getIsTitleSegment()); // Control visibility
+    titleMultiSelectComboBox.setValue(segment.getTitles()); // Set initial value
     titleMultiSelectComboBox.setId("edit-title-multi-select-combo-box");
 
     // Add checkbox to indicate if it's a title segment
@@ -1174,15 +1094,13 @@ public class ShowDetailView extends Main
         event -> {
           titleMultiSelectComboBox.setVisible(event.getValue());
           if (!event.getValue()) {
-            titleMultiSelectComboBox.clear();
+            titleMultiSelectComboBox.clear(); // Clear selection if not a title segment
           }
         });
 
     formLayout.add(
         segmentTypeCombo,
         rulesCombo,
-        alignmentFilter,
-        genderFilter,
         wrestlersCombo,
         winnersCombo,
         isTitleSegmentCheckbox,
@@ -1210,9 +1128,9 @@ public class ShowDetailView extends Main
                   wrestlersCombo.getValue(),
                   winnersCombo.getValue(),
                   rulesCombo.getValue(),
-                  segment)) {
+                  segment)) { // Pass the segment to update
                 dialog.close();
-                refreshSegmentsGrid();
+                refreshSegmentsGrid(); // Call refreshSegmentsGrid
               }
             });
     saveButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
@@ -1250,7 +1168,7 @@ public class ShowDetailView extends Main
                         "Segment deleted successfully!", 3000, Notification.Position.BOTTOM_START)
                     .addThemeVariants(NotificationVariant.LUMO_SUCCESS);
                 confirmDialog.close();
-                refreshSegmentsGrid();
+                refreshSegmentsGrid(); // Call refreshSegmentsGrid
               } catch (Exception e) {
                 Notification.show(
                         "Error deleting segment: " + e.getMessage(),
@@ -1318,29 +1236,18 @@ public class ShowDetailView extends Main
 
     try {
       Segment segment;
-      if (segmentToUpdate != null && segmentToUpdate.getId() != null) {
+      if (segmentToUpdate != null) {
         segment = segmentToUpdate;
         segment.syncParticipants(new ArrayList<>(wrestlers));
         segment.syncSegmentRules(new ArrayList<>(rules));
         segment.setAdjudicationStatus(AdjudicationStatus.PENDING);
         log.info("Updating existing segment: {}", segment.getId());
       } else {
-        // Use the passed object if present (for new segments with data), or create new
-        segment = (segmentToUpdate != null) ? segmentToUpdate : new Segment();
-
-        if (segment.getShow() == null) {
-          segment.setShow(show);
-        }
-        if (segment.getSegmentDate() == null) {
-          segment.setSegmentDate(java.time.Instant.now());
-        }
-        if (segment.getIsTitleSegment() == null) {
-          segment.setIsTitleSegment(false);
-        }
-        if (segment.getIsNpcGenerated() == null) {
-          segment.setIsNpcGenerated(false);
-        }
-
+        segment = new Segment();
+        segment.setShow(show);
+        segment.setSegmentDate(java.time.Instant.now());
+        segment.setIsTitleSegment(false);
+        segment.setIsNpcGenerated(false);
         segment.syncParticipants(new ArrayList<>(wrestlers));
         segment.syncSegmentRules(new ArrayList<>(rules));
         log.info("Creating new segment for show: {}", show.getName());
@@ -1353,16 +1260,15 @@ public class ShowDetailView extends Main
       }
 
       // Save or update the segment
-      if (segment.getId() != null) {
-        segmentService.updateSegment(segment);
+      segmentRepository.save(segment);
+      log.info("Segment saved successfully: {}", segment.getId());
+      if (segmentToUpdate != null) {
         Notification.show("Segment updated successfully!", 3000, Notification.Position.BOTTOM_START)
             .addThemeVariants(NotificationVariant.LUMO_SUCCESS);
       } else {
-        segmentService.saveSegment(segment);
         Notification.show("Segment added successfully!", 3000, Notification.Position.BOTTOM_START)
             .addThemeVariants(NotificationVariant.LUMO_SUCCESS);
       }
-      log.info("Segment saved successfully: {}", segment.getId());
       return true;
     } catch (Exception e) {
       log.error("Error saving segment: {}", e.getMessage(), e);
@@ -1414,7 +1320,11 @@ public class ShowDetailView extends Main
       // Re-enable/disable adjudicate button based on new segment status
       boolean hasPendingSegments =
           updatedSegments.stream()
-              .anyMatch(segment -> segment.getAdjudicationStatus() == AdjudicationStatus.PENDING);
+              .anyMatch(
+                  segment ->
+                      segment.getAdjudicationStatus()
+                          == com.github.javydreamercsw.management.domain.AdjudicationStatus
+                              .PENDING);
       // Find the adjudicate button and update its enabled state
       contentLayout
           .getChildren()
@@ -1458,13 +1368,13 @@ public class ShowDetailView extends Main
       // Check if the completed show is the one currently being viewed
       assert adjudicationCompletedEvent.getShow().getId() != null;
       if (adjudicationCompletedEvent.getShow().getId().equals(currentShowId)) {
-        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid));
+        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid)); // Call refreshSegmentsGrid
       }
     } else if (event instanceof SegmentsApprovedEvent segmentsApprovedEvent) {
       // Check if the completed show is the one currently being viewed
       assert segmentsApprovedEvent.getShow().getId() != null;
       if (segmentsApprovedEvent.getShow().getId().equals(currentShowId)) {
-        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid));
+        getUI().ifPresent(ui -> ui.access(this::refreshSegmentsGrid)); // Call refreshSegmentsGrid
       }
     }
   }
